hphp/hack/test/sound_dynamic/typing/coerce_from_dyn.bad.php.exp
File "coerce_from_dyn.bad.php", line 8, characters 11-12:
Invalid argument (Typing[4110])
  File "coerce_from_dyn.bad.php", line 5, characters 18-27:
  Expected `(int, int)`
  File "coerce_from_dyn.bad.php", line 7, characters 21-27:
  But got `dynamic`
File "coerce_from_dyn.bad.php", line 14, characters 11-12:
Invalid argument (Typing[4110])
  File "coerce_from_dyn.bad.php", line 11, characters 18-35:
  Expected `shape('x' => int)`
  File "coerce_from_dyn.bad.php", line 13, characters 21-27:
  But got `dynamic`
File "coerce_from_dyn.bad.php", line 22, characters 13-14:
Invalid argument (Typing[4110])
  File "coerce_from_dyn.bad.php", line 19, characters 20-25:
  Expected `C<int>`
  File "coerce_from_dyn.bad.php", line 21, characters 23-29:
  But got `dynamic`
File "coerce_from_dyn.bad.php", line 28, characters 13-14:
Invalid argument (Typing[4110])
  File "coerce_from_dyn.bad.php", line 25, characters 22-24:
  Expected `int`
  File "coerce_from_dyn.bad.php", line 27, characters 25-31:
  But got `dynamic`
File "coerce_from_dyn.bad.php", line 39, characters 12-13:
Invalid argument (Typing[4110])
  File "coerce_from_dyn.bad.php", line 31, characters 19-24:
  Expected `string`
  File "coerce_from_dyn.bad.php", line 37, characters 10-10:
  But got `int`
